<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="additems">AddItems</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="totalcost">TotalCost</string>
    <string name="amt">Amt</string>
    <string name="todo">TODO</string>
    <string name="add_items_to_cart">Add Items to Cart</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>