<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue_shade_2"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"/>

            <ImageView
                android:id="@+id/deleteItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/todo"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:layout_below="@id/linearLayout"
            android:text="@string/totalcost"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/totalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:layout_below="@id/linearLayout"
            android:layout_alignParentEnd="true"
            android:text="@string/amt"
            android:textColor="@color/white"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>